# tranclator

./: .taplo.toml  Cargo.toml  README.md  tranclator-schema.json
langs/: tranclator.toml
src/: main.rs
