[package]
name = "tranclator"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
arboard = "3.6.0"
toml = { version = "0.9.4", features = ["preserve_order"] }
indexmap = { version = "2.10.0", features = ["serde"] }
